examples/test/testpolicy101.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy101
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key7: value43
      key35: value33
      key34: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value34
          key17: value2
      podSelector:
        matchLabels:
          key30: value8
